--- a/public/account.html
+++ b/public/account.html
@@ -145,6 +145,13 @@
                         const userData = values[0].data();
                         const sub = values[1].data;
 
+                        // Send the user identification data to LogRocket.
+                        LogRocket.identify(user.uid, {
+                            name: `${userData.first_name} ${userData.last_name}`,
+                            email: user.email
+                        });
+
+
                         // Show the subscription details, or a way to get a subscription if there is none.
                         let subHTML = '';
                         if (sub.subscription) {
