--- a/public/index.html
+++ b/public/index.html
@@ -113,6 +113,12 @@
                   // Get the user record.
                   const userData = doc.data();
 
+                  // Send the user identification data to LogRocket.
+                  LogRocket.identify(user.uid, {
+                    name: `${userData.first_name} ${userData.last_name}`,
+                    email: user.email
+                  });
+
                   // We'll need to check each of the user's causes for a giving amount first.
                   let allocated = true;
                   if (userData.causes) {
