--- a/public/onboarding-allocation.html
+++ b/public/onboarding-allocation.html
@@ -116,6 +116,12 @@
                             // Grab the user data.
                             const userData = userDoc.data();
 
+                            // Send the user identification data to LogRocket.
+                            LogRocket.identify(user.uid, {
+                                name: `${userData.first_name} ${userData.last_name}`,
+                                email: user.email
+                            });
+
                             // Put the causes and budget in the state.
                             app.causes = userData.causes;
                             app.budget = userData.budget;
