--- a/public/onboarding-budget.html
+++ b/public/onboarding-budget.html
@@ -104,6 +104,12 @@
                         // If the user record exists, get the budget.
                         const userData = userDoc.data();
 
+                        // Send the user identification data to LogRocket.
+                        LogRocket.identify(user.uid, {
+                            name: `${userData.first_name} ${userData.last_name}`,
+                            email: user.email
+                        });
+
                         // In any event, build the budget selector HTML.
                         const html = `
                             <div style="max-width: 325px; margin: 0 auto;">
