--- a/public/onboarding-causes.html
+++ b/public/onboarding-causes.html
@@ -139,6 +139,12 @@
                             const causeData = causeDoc.data();
                             const userData = userDoc.data();
 
+                            // Send the user identification data to LogRocket.
+                            LogRocket.identify(user.uid, {
+                                name: `${userData.first_name} ${userData.last_name}`,
+                                email: user.email
+                            });
+
                             // Store this cause in the state so we can use it later without going async again.
                             app.causes[causeDoc.id] = causeData;
 
