--- a/public/onboarding-welcome.html
+++ b/public/onboarding-welcome.html
@@ -81,6 +81,9 @@
                 // User is signed in, see docs for a list of available properties.
                 // https://firebase.google.com/docs/reference/js/firebase.User
 
+                // Send the user identification data to LogRocket.
+                LogRocket.identify(user.uid);
+
                 // Get the causes data, just to count.
                 const db = firebase.firestore();
                 db.collection("causes").get().then((querySnapshot) => {
