--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -150,6 +150,12 @@
                         const stripeSubscription = values[3].data;
                         const totalAmountGiven = stripeCharges.data.totalAmountGiven;
 
+                        // Send the user identification data to LogRocket.
+                        LogRocket.identify(user.uid, {
+                            name: `${userData.first_name} ${userData.last_name}`,
+                            email: user.email
+                        });
+
                         // Check for errors with the Stripe routines.
                         if (stripeCharges.data && stripeCharges.data.isError) {
                             console.error(stripeCharges.data.message);
