--- a/public/stripe-return.html
+++ b/public/stripe-return.html
@@ -104,6 +104,9 @@
                 // User is signed in, see docs for a list of available properties.
                 // https://firebase.google.com/docs/reference/js/firebase.User
 
+                // Send the user identification data to LogRocket.
+                LogRocket.identify(user.uid);
+
                 // Set the stripe public key. Use the test key on localhost, production key everywhere else.
                 let stripePublicKey;
                 if (window.location.hostname == 'localhost') {
