--- a/public/onboarding-payment.html
+++ b/public/onboarding-payment.html
@@ -113,7 +113,9 @@
                 // https://firebase.google.com/docs/reference/js/firebase.User
 
                 // Send the user identification data to LogRocket.
-                LogRocket.identify(user.uid);
+                if (LogRocket) {
+                    LogRocket.identify(user.uid);
+                }
 
                 // Attempt to set up the stripe Customer and Subscription.
                 var stripeStart = firebase.functions().httpsCallable('stripeStart');
