--- a/public/account.html
+++ b/public/account.html
@@ -146,10 +146,12 @@
                         const sub = values[1].data;
 
                         // Send the user identification data to LogRocket.
-                        LogRocket.identify(user.uid, {
-                            name: `${userData.first_name} ${userData.last_name}`,
-                            email: user.email
-                        });
+                        if (LogRocket) {
+                            LogRocket.identify(user.uid, {
+                                name: `${userData.first_name} ${userData.last_name}`,
+                                email: user.email
+                            });
+                        }
 
 
                         // Show the subscription details, or a way to get a subscription if there is none.
@@ -205,7 +207,7 @@
                         `);
                     })
                     .catch((error) => {
-                        console.log("Error getting something from a service:", error);
+                        console.error("Error getting something from a service:", error);
                     });
             } else {
                 // User is signed out. They can't be on this page. Put them back on the auth page.
