--- a/public/impact.html
+++ b/public/impact.html
@@ -143,16 +143,18 @@
                         const userData = userDoc.data();
 
                         // Send the user identification data to LogRocket.
-                        LogRocket.identify(user.uid, {
-                            name: `${userData.first_name} ${userData.last_name}`,
-                            email: user.email
-                        });
+                        if (LogRocket) {
+                            LogRocket.identify(user.uid, {
+                                name: `${userData.first_name} ${userData.last_name}`,
+                                email: user.email
+                            });
+                        }
                     } else {
                         // doc.data() will be undefined in this case
                         console.error("No such user document");
                     }
                 }).catch((error) => {
-                    console.log("Error getting document:", error);
+                    console.error("Error getting document:", error);
                 });
             }
         });
