--- a/public/index.html
+++ b/public/index.html
@@ -114,10 +114,12 @@
                   const userData = doc.data();
 
                   // Send the user identification data to LogRocket.
-                  LogRocket.identify(user.uid, {
-                    name: `${userData.first_name} ${userData.last_name}`,
-                    email: user.email
-                  });
+                  if (LogRocket) {
+                    LogRocket.identify(user.uid, {
+                      name: `${userData.first_name} ${userData.last_name}`,
+                      email: user.email
+                    });
+                  }
 
                   // We'll need to check each of the user's causes for a giving amount first.
                   let allocated = true;
@@ -171,7 +173,7 @@
               }
             }).catch((error) => {
               // Error getting user document.
-              console.log("Error getting document:", error);
+              console.error("Error getting document:", error);
             });
           } else {
             // User is signed out. Show the sign in widget.
