--- a/public/onboarding-allocation.html
+++ b/public/onboarding-allocation.html
@@ -117,10 +117,12 @@
                             const userData = userDoc.data();
 
                             // Send the user identification data to LogRocket.
-                            LogRocket.identify(user.uid, {
-                                name: `${userData.first_name} ${userData.last_name}`,
-                                email: user.email
-                            });
+                            if (LogRocket) {
+                                LogRocket.identify(user.uid, {
+                                    name: `${userData.first_name} ${userData.last_name}`,
+                                    email: user.email
+                                });
+                            }
 
                             // Put the causes and budget in the state.
                             app.causes = userData.causes;
@@ -169,7 +171,7 @@
                         console.log("No such document!");
                     }
                 }).catch((error) => {
-                    console.log("Error getting document:", error);
+                    console.error("Error getting document:", error);
                 });
             }
         });
