--- a/public/onboarding-causes.html
+++ b/public/onboarding-causes.html
@@ -149,10 +149,12 @@
                             const causeData = causeDoc.data();
 
                             // Send the user identification data to LogRocket.
-                            LogRocket.identify(user.uid, {
-                                name: `${userData.first_name} ${userData.last_name}`,
-                                email: user.email
-                            });
+                            if (LogRocket) {
+                                LogRocket.identify(user.uid, {
+                                    name: `${userData.first_name} ${userData.last_name}`,
+                                    email: user.email
+                                });
+                            }
 
                             // Store this cause in the state so we can use it later without going async again.
                             app.causes[causeDoc.id] = causeData;
@@ -199,7 +201,7 @@
                         }
                     })
                     .catch((error) => {
-                        console.log("Error getting document:", error);
+                        console.error("Error getting document:", error);
                     });
             }
         });
