--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -151,10 +151,12 @@
                         const totalAmountGiven = stripeCharges.data.totalAmountGiven;
 
                         // Send the user identification data to LogRocket.
-                        LogRocket.identify(user.uid, {
-                            name: `${userData.first_name} ${userData.last_name}`,
-                            email: user.email
-                        });
+                        if (LogRocket) {
+                            LogRocket.identify(user.uid, {
+                                name: `${userData.first_name} ${userData.last_name}`,
+                                email: user.email
+                            });
+                        }
 
                         // Check for errors with the Stripe routines.
                         if (stripeCharges.data && stripeCharges.data.isError) {
@@ -243,7 +245,7 @@
                         `);
                     })
                     .catch((error) => {
-                        console.log("Error getting something from a service:", error);
+                        console.error("Error getting something from a service:", error);
                     });
             } else {
                 // User is signed out. They can't be on this page. Put them back on the auth page.
