--- a/public/onboarding-payment.html
+++ b/public/onboarding-payment.html
@@ -77,7 +77,7 @@
 <div id="footerMenuContainer" class="border-top p-3 bg-light" style="position: fixed; bottom: 0; left: 0; width: 100%;">
     <div class="d-flex justify-content-center">
         <div class="px-2" style="width: 600px;">
-            <div id="error-message">
+            <div id="error-message" class="d-none alert alert-danger round15" role="alert">
                 <!-- Display error message to your customers here -->
             </div>
         </div>
@@ -182,6 +182,9 @@
             return;
         }
 
+        // Hide the error message since we're trying again.
+        $('#error-message').addClass('d-none');
+
         // Give the button a spinner.
         btn.html(`
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
@@ -205,8 +208,7 @@
             // This point will only be reached if there is an immediate error when
             // confirming the payment. Show error to your customer (for example, payment
             // details incomplete)
-            const messageContainer = document.querySelector('#error-message');
-            messageContainer.textContent = error.message;
+            $('#error-message').text(error.message).removeClass('d-none');
             // Put the button back to being ready.
             btn.removeClass('disabled');
             btn.html(`
