A few fixes from testing

--- a/public/onboarding-payment.html
+++ b/public/onboarding-payment.html
@@ -72,6 +72,9 @@
             </div>
         </div>
     </div>
+
+    <!-- Placeholder for footer so it doesn't cover up the content. -->
+    <div style="height: 50px; width: 100%;"></div>
 </div>
 
 <div id="footerMenuContainer" class="border-top p-3 bg-light" style="position: fixed; bottom: 0; left: 0; width: 100%;">
