--- a/public/account.html
+++ b/public/account.html
@@ -146,7 +146,7 @@
                         const sub = values[1].data;
 
                         // Send the user identification data to LogRocket.
-                        if (LogRocket) {
+                        if (typeof LogRocket !== 'undefined') {
                             LogRocket.identify(user.uid, {
                                 name: `${userData.first_name} ${userData.last_name}`,
                                 email: user.email
