--- a/public/onboarding-causes.html
+++ b/public/onboarding-causes.html
@@ -149,7 +149,7 @@
                             const causeData = causeDoc.data();
 
                             // Send the user identification data to LogRocket.
-                            if (LogRocket) {
+                            if (typeof LogRocket !== 'undefined') {
                                 LogRocket.identify(user.uid, {
                                     name: `${userData.first_name} ${userData.last_name}`,
                                     email: user.email
