--- a/public/onboarding-payment.html
+++ b/public/onboarding-payment.html
@@ -116,7 +116,7 @@
                 // https://firebase.google.com/docs/reference/js/firebase.User
 
                 // Send the user identification data to LogRocket.
-                if (LogRocket) {
+                if (typeof LogRocket !== 'undefined') {
                     LogRocket.identify(user.uid);
                 }
 
