--- a/public/account.html
+++ b/public/account.html
@@ -195,7 +195,7 @@
                         $('#accountContainer').html(`
                             <div class="border shadow-sm round15 p-3 mt-4">
                                 <h3>Account</h3>
-                                <p class="mb-0">Name: ${userData.first_name}</p>
+                                <p class="mb-0">Name: ${userData.first_name} ${userData.last_name ? userData.last_name : ''}</p>
                                 <p class="mb-0">Email: ${user.email}</p>
                                 <div class="d-grid gap-2 mt-4">
                                     <button type="button" class="btn btn-primary btn-lg" onclick="app.signOut();">Sign out</button>
