--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -58,7 +58,7 @@
     <div class="px-3 py-2 border-bottom">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
+                <a href="/portfolio.html" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
                     <img src="images/logo-header.png" style="height: 50px" alt="Goodist logo">
                 </a>
 
