Put notice about test card #

--- a/public/onboarding-payment.html
+++ b/public/onboarding-payment.html
@@ -59,6 +59,10 @@
         <h3 class="mb-5">Enter your payment information</h3>
     </div>
 
+    <div class="alert alert-primary mx-2" role="alert">
+        Use card # <strong>4242 4242 4242 4242</strong> to run in test mode.
+    </div>
+
     <div id="spinnerContainer" style="margin: 0 auto;">
         <div class="spinner-border text-primary mt-4" role="status">
             <span class="visually-hidden">Loading...</span>
