--- a/public/impact.html
+++ b/public/impact.html
@@ -6,10 +6,6 @@
     <title>Goodist | Impact</title>
     <link rel="shortcut icon" type="image/" href="images/favicon.ico"/>
 
-    <!-- LogRocket -->
-    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-    <script>window.LogRocket && window.LogRocket.init('ongjhk/goodist');</script>
-
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap: JavaScript Bundle with Popper -->
@@ -90,8 +86,8 @@
 <div class="container">
     <div id="impactContainer" style="max-width: 600px; margin: 0 auto;">
         <div class="border shadow-sm round15 p-3 mt-4">
-            <h3>Nothing to show here yet</h3>
-            <p class="mb-0">Come back soon to see your giving in action!</p>
+            <h3>Coming soon!</h3>
+            <p class="mb-0">See your giving in action!</p>
         </div>
     </div>
 </div>
@@ -141,14 +137,6 @@
                     if (userDoc.exists) {
                         // If the user record exists, get the budget.
                         const userData = userDoc.data();
-
-                        // Send the user identification data to LogRocket.
-                        if (typeof LogRocket !== 'undefined') {
-                            LogRocket.identify(user.uid, {
-                                name: `${userData.first_name} ${userData.last_name}`,
-                                email: user.email
-                            });
-                        }
                     } else {
                         // doc.data() will be undefined in this case
                         console.error("No such user document");
