--- a/public/onboarding-causes.html
+++ b/public/onboarding-causes.html
@@ -6,10 +6,6 @@
     <title>Goodist | Causes</title>
     <link rel="shortcut icon" type="image/" href="images/favicon.ico"/>
 
-    <!-- LogRocket -->
-    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-    <script>window.LogRocket && window.LogRocket.init('ongjhk/goodist');</script>
-
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap: JavaScript Bundle with Popper -->
@@ -148,14 +144,6 @@
                             // Get the data for both causes and users.
                             const causeData = causeDoc.data();
 
-                            // Send the user identification data to LogRocket.
-                            if (typeof LogRocket !== 'undefined') {
-                                LogRocket.identify(user.uid, {
-                                    name: `${userData.first_name} ${userData.last_name}`,
-                                    email: user.email
-                                });
-                            }
-
                             // Store this cause in the state so we can use it later without going async again.
                             app.causes[causeDoc.id] = causeData;
 
@@ -214,24 +202,10 @@
         // Get the cause info from the state.
         const cause = app.causes[causeId];
 
-        // Build the list of example orgs.
-        let examples = '';
-        for (const o of cause.example_orgs) {
-            examples += `
-                <li><a href="${o.link}" target="_blank">${o.name}</a></li>
-            `;
-        }
-
         // Show the modal with the name and content.
         $('#causeDetailModalLabel').text(cause.cause_name);
         $('#causeDetailModalIcon').attr('src', `images/cause-icons/${causeId}.svg`);
-        $('#causeDetailModalContent').html(`
-            <p>${cause.description}</p>
-            <p>Charities in this category might include:</p>
-            <ul>
-                ${examples}
-            </ul>
-        `);
+        $('#causeDetailModalContent').html(cause.description);
         app.causeDetailModal.show();
     }
 
