--- a/public/onboarding-payment.html
+++ b/public/onboarding-payment.html
@@ -6,10 +6,6 @@
     <title>Goodist | Payment</title>
     <link rel="shortcut icon" type="image/" href="images/favicon.ico"/>
 
-    <!-- LogRocket -->
-    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-    <script>window.LogRocket && window.LogRocket.init('ongjhk/goodist');</script>
-
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap: JavaScript Bundle with Popper -->
@@ -59,7 +55,7 @@
         <h3 class="mb-5">Enter your payment information</h3>
     </div>
 
-    <div class="alert alert-primary mx-2" role="alert">
+    <div class="alert alert-primary mx-auto px-2 mb-4" role="alert" style="max-width: 600px">
         Use card # <strong>4242 4242 4242 4242</strong> to run in test mode.
     </div>
 
@@ -119,11 +115,6 @@
                 // User is signed in, see docs for a list of available properties.
                 // https://firebase.google.com/docs/reference/js/firebase.User
 
-                // Send the user identification data to LogRocket.
-                if (typeof LogRocket !== 'undefined') {
-                    LogRocket.identify(user.uid);
-                }
-
                 // Attempt to set up the stripe Customer and Subscription.
                 var stripeStart = firebase.functions().httpsCallable('stripeStart');
                 stripeStart()
@@ -147,13 +138,7 @@
                         }
 
                         // Set the stripe public key. Use the test key on localhost, production key everywhere else.
-                        let stripePublicKey;
-                        //if (window.location.hostname == 'localhost') {
-                            stripePublicKey = 'pk_test_51KWRApBLF6OO4Modm3Fp2GFWu3Vpl622eJCfQQ2a5qC17B8rF6klDi7KaCpvfGaSy5aWThfuJOGHUpshRA3KUgiO00oAlY8Znm';
-                        //} else {
-                        //    stripePublicKey = 'pk_live_51KWRApBLF6OO4ModKEgGcAdpiMepxE9GCZhdsF4bWJH6hWnsczjTLy0Atdaqbl2sp89h8Fl80DP0ixeHrMbJIOmh00I5yQ8BfO';
-                        //}
-                        app.stripe = Stripe(stripePublicKey);
+                        app.stripe = Stripe('pk_test_51N4B99H7FPrUerjhe4znLgEWtrg1KfteR8mWdkCBQ1GdPBrUGGwbr19tzxS3LhJVZpiwjxP8QIDEgt1TqaQ4QHlI001ohzeS33');
                         const options = {
                             clientSecret: result.data.clientSecret,
                             // Fully customizable with appearance API.
