--- a/public/stripe-return.html
+++ b/public/stripe-return.html
@@ -5,11 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Goodist | Payment</title>
     <link rel="shortcut icon" type="image/" href="images/favicon.ico"/>
-
-    <!-- LogRocket -->
-    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-    <script>window.LogRocket && window.LogRocket.init('ongjhk/goodist');</script>
-
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap: JavaScript Bundle with Popper -->
@@ -104,19 +99,8 @@
                 // User is signed in, see docs for a list of available properties.
                 // https://firebase.google.com/docs/reference/js/firebase.User
 
-                // Send the user identification data to LogRocket.
-                if (typeof LogRocket !== 'undefined') {
-                    LogRocket.identify(user.uid);
-                }
-
                 // Set the stripe public key. Use the test key on localhost, production key everywhere else.
-                let stripePublicKey;
-                if (window.location.hostname == 'localhost') {
-                    stripePublicKey = 'pk_test_51KWRApBLF6OO4Modm3Fp2GFWu3Vpl622eJCfQQ2a5qC17B8rF6klDi7KaCpvfGaSy5aWThfuJOGHUpshRA3KUgiO00oAlY8Znm';
-                } else {
-                    stripePublicKey = 'pk_live_51KWRApBLF6OO4ModKEgGcAdpiMepxE9GCZhdsF4bWJH6hWnsczjTLy0Atdaqbl2sp89h8Fl80DP0ixeHrMbJIOmh00I5yQ8BfO';
-                }
-                const stripe = Stripe(stripePublicKey);
+                const stripe = Stripe('pk_test_51N4B99H7FPrUerjhe4znLgEWtrg1KfteR8mWdkCBQ1GdPBrUGGwbr19tzxS3LhJVZpiwjxP8QIDEgt1TqaQ4QHlI001ohzeS33');
 
                 // Retrieve the "payment_intent_client_secret" query parameter appended to
                 // your return_url by Stripe.js
